# wingbeat-modulation-lidar-data-acquisition

./: Digitizer.py  README.md  adc-config.toml  digitizer.py  pyproject.toml
docs/: adc-config-example.toml
src/data_acquisition/: digitizer.py
src/wingbeat_lidar/: digitizer.py  range_calibration.py
tests/: README.md  digitizer_integration_tests.py  digitizer_unit_tests.py  example-config-1.toml  example-config-2.toml  example-config-3.toml  example-config-4.toml  example-config-trig-delay.toml  integration_tests.py  invalid-dc-offset-config.toml  invalid-n-samples-config.toml  invalid-sample-rate-config-1.toml  invalid-sample-rate-config-2.toml  invalid-trig-condition-config.toml  invalid-trig-delay-config.toml  invalid-trig-source-config-2.toml  invalid-trig-source-config.toml  range_calibration_integration_tests.py  range_calibration_unit_tests.py  test_digitizer.py  unit_tests.py
tests/adc-configs/: example-config-1.toml  example-config-3.toml  example-config-4.toml  invalid-dc-offset-config.toml  invalid-n-samples-config.toml  invalid-sample-rate-config-2.toml  invalid-trig-delay-config.toml  invalid-trig-source-config.toml  range-calibration-test-config.toml
tests/range-calibration-configs/: invalid-date-datatype.toml  invalid-keys.toml  invalid-offset-datatype.toml  invalid-slope-datatype.toml
